--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "plugin-kubectl-boilerplate",
-  "version": "1.0.0",
+  "name": "plugin-logui",
+  "version": "0.0.0",
   "description": "",
   "main": "node_modules/@kui-shell/core/main/main.js",
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:kui-shell/plugin-kubectl-boilerplate.git"
+    "url": "git@github.com:kui-shell/plugin-logui.git"
   },
   "keywords": [
     "kubernetes",
@@ -40,18 +40,18 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
-    "@kui-shell/builder": "5.2.21",
-    "@kui-shell/core": "5.2.21",
-    "@kui-shell/plugin-bash-like": "5.2.21",
-    "@kui-shell/plugin-core-support": "5.2.21",
-    "@kui-shell/plugin-editor": "5.2.21",
+    "@kui-shell/builder": "5.2.24",
+    "@kui-shell/core": "5.2.24",
+    "@kui-shell/plugin-bash-like": "5.2.24",
+    "@kui-shell/plugin-core-support": "5.2.24",
+    "@kui-shell/plugin-editor": "5.2.24",
     "@kui-shell/plugin-kubeui": "0.0.1",
-    "@kui-shell/plugin-proxy-support": "5.2.21",
-    "@kui-shell/proxy": "5.2.21",
-    "@kui-shell/test": "5.2.21",
-    "@kui-shell/webpack": "5.2.21",
+    "@kui-shell/plugin-proxy-support": "5.2.24",
+    "@kui-shell/proxy": "5.2.24",
+    "@kui-shell/test": "5.2.24",
+    "@kui-shell/webpack": "5.2.24",
     "@types/mocha": "5.2.7",
-    "@types/node": "12.12.3",
+    "@types/node": "12.12.5",
     "@types/uuid": "3.4.6",
     "@types/webdriverio": "4.13.3",
     "@typescript-eslint/eslint-plugin": "2.6.0",
@@ -72,7 +72,7 @@
     "typescript": "3.6.4"
   },
   "dependencies": {
-    "@kui-shell/plugin-sample": "file:plugins/plugin-sample"
+    "@kui-shell/plugin-logui": "file:plugins/plugin-logui"
   },
   "husky": {
     "hooks": {
